--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "puppeteer": "^22.7.1",
+    "sqlite3": "^5.1.7",
     "tough-cookie": "^4.1.3"
   }
 }
