--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
-    "axios-cookiejar-support": "^5.0.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "puppeteer": "^22.7.1",
-    "tough-cookie": "^4.1.3"
+    "sqlite3": "^5.1.7"
   }
 }
