--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "https": "^1.0.0",
     "sqlite3": "^5.1.7"
   }
 }
