--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "node src/deploy.js",
     "start": "node src/index.js"
   },
   "author": "",
