--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "migrate": "node migrate.js"
+    "migrate": "node migrate.js",
+    "deploy": "node deploy.js"
   },
   "author": "",
   "license": "ISC",
