--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@atproto/api": "^0.13.12",
-    "@sireatsalot/youtube.js": "github:Mampfinator/youtube.js#comments",
+    "@sireatsalot/youtube.js": "github:Mampfinator/youtube.js",
     "axios": "^1.6.8",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
